# quiz-maker

./: .gitignore  LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 483ca6d67361_initial.py
src/: main.py
src/api/: __init__.py
src/api/v1/: __init__.py
src/api/v1/quizzes/: __init__.py  published_quizzes.py  quizzes.py
src/api/v1/users/: __init__.py  users.py
src/app/controllers/: __init__.py  auth.py  question.py  quiz.py  user_answers.py
src/app/models/: __init__.py  enums_.py  user.py
src/app/models/quizzes/: __init__.py  options.py  question.py  quiz.py  user_answers.py
src/app/repositories/: __init__.py  participant.py  question.py  quiz.py  user.py  user_answers.py
src/app/utils/: get_quiz.py  quiz_validations.py  random_string.py  validate_questions.py
src/core/: config.py  server.py  template.env
src/core/access_control/: __init__.py  access_control.py  policies.py
src/core/auth/: email_client.py
src/core/cache/: redis_client.py
src/core/database/: __init__.py  session.py
src/core/excpetions/: __init__.py  http_exceptions.py  jwt_exceptions.py
src/core/fastapi/: exception_handlers.py
src/core/protocols/: user_info.py
src/core/repository/: base.py
src/core/security/: jwt.py  password.py
src/core/types/: database_out.py
src/core/utils/: slugify.py
tests/api/: conftest.py
tests/api/v1/: test_published_quizzes.py  test_quizzes.py  test_users.py
tests/extra/: create_question.py  quizzes.py  register_users.py
tests/mocks/: __init__.py  email.py  redis.py  session.py
(+8 files in other folders)
